Multiple chat rooms

--- a/resources/css.css
+++ b/resources/css.css
@@ -253,3 +253,12 @@ input#entry {
 .weather {
   display:none;
 }
+
+#upload {
+	display:inline-block;
+}
+
+.button, input[type=file] {
+	font-size:1.1em;
+	margin-left:20px;
+}
