Fix printing welcome messages in all chatrooms bug.

--- a/resources/css.css
+++ b/resources/css.css
@@ -246,19 +246,7 @@ input#entry {
     text-align:left;
 }
 
-#user {
+#user, #room {
   display:none;
 }
 
-.weather {
-  display:none;
-}
-
-#upload {
-	display:inline-block;
-}
-
-.button, input[type=file] {
-	font-size:1.1em;
-	margin-left:20px;
-}
