--- a/resources/css.css
+++ b/resources/css.css
@@ -227,14 +227,14 @@ input#entry {
     top:25px;
 }
 
-.number {display:inline-block;color: #ccc;font-variant:small-caps;width:3%;text-align:right;}
-.time {display:inline-block;color: #ccc;font-variant:small-caps;width:3%;}
-.user {display:inline-block;color: #B30A0A;font-variant:small-caps;width:4%;}
-.message{display:inline-block;color:#252525;width:70%;vertical-align:text-top;}
-.old-number {display:inline-block;color: #ccc;font-variant:small-caps;width:3%;text-align:right;}
-.old-time {display:inline-block;color: #ccc;font-variant:small-caps;width:3%;}
-.old-user {display:inline-block;color: #d98585;font-variant:small-caps;width:4%;}
-.old-message{display:inline-block;color:#939393;width:70%;vertical-align:text-top;}
+.number {display:inline-block;color: #ccc;font-variant:small-caps;width:50px;text-align:right;}
+.time {display:inline-block;color: #ccc;font-variant:small-caps;width:50px;}
+.user {display:inline-block;color: #B30A0A;font-variant:small-caps;width:65px;}
+.message{display:inline-block;color:#252525;vertical-align:text-top;max-width:1000px;}
+.old-number {display:inline-block;color: #ccc;font-variant:small-caps;width:50px;text-align:right;}
+.old-time {display:inline-block;color: #ccc;font-variant:small-caps;width:50px;}
+.old-user {display:inline-block;color: #d98585;font-variant:small-caps;width:65px;}
+.old-message{display:inline-block;color:#939393;max-width:1000px;vertical-align:text-top;}
 
 #top {
     background:#E4E1D8;
